--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,7 +2,7 @@ FROM golang:1.21-alpine
 
 RUN apk add --no-cache git gcc musl-dev
 
-RUN go install github.com/cosmtrek/air@latest
+RUN go install github.com/cosmtrek/air@v1.51.0
 
 WORKDIR /app
 
@@ -14,3 +14,4 @@ COPY . .
 EXPOSE 8080
 
 CMD ["air", "-c", ".air.toml"]
+
