--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,8 @@
-FROM golang:1.22-alpine
+FROM golang:1.25-alpine
 
 RUN apk add --no-cache git gcc musl-dev
 
-RUN go install github.com/cosmtrek/air@v1.51.0
+RUN go install github.com/cosmtrek/air@latest
 
 WORKDIR /app
 
@@ -14,5 +14,7 @@ COPY . .
 EXPOSE 8080
 
 CMD ["air", "-c", ".air.toml"]
+
+
 
 
