--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,7 +2,7 @@ FROM golang:1.25-alpine
 
 RUN apk add --no-cache git gcc musl-dev
 
-RUN go install github.com/air-verse/air/v2@latest
+RUN go install github.com/air-verse/air@latest
 
 WORKDIR /app
 
@@ -14,6 +14,7 @@ COPY . .
 EXPOSE 8080
 
 CMD ["air", "-c", ".air.toml"]
+
 
 
 
